--- a/package.json
+++ b/package.json
@@ -1,17 +1,40 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
-  "license": "",
-  "engines": {
-    "node": ">=6.13.0"
-  },
-  "scripts": {
-  },
+  "name": "reviews",
+  "version": "1.0.0",
+  "description": "fashova_reviews",
+  "main": "webpack.config.js",
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.0",
+    "mongoose": "^5.5.9",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
-  }
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "nodemon": "^1.19.0",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "react-dev": "webpack -d --watch",
+    "start": "nodemon server/server_index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/csspence/reviews.git"
+  },
+  "author": "Crew Spence",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/csspence/reviews/issues"
+  },
+  "homepage": "https://github.com/csspence/reviews#readme"
 }
