--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.0",
     "mongoose": "^5.5.9",
     "react": "^16.8.6",
