--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "reviews",
   "version": "1.0.0",
   "description": "fashova_reviews",
-  "main": "webpack.config.js",
+  "main": "./server/server_index.js",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": ">=0.19.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.19.0",
@@ -31,12 +31,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/csspence/reviews.git"
+    "url": "git+https://github.com/hratx41-sdc/reviews"
   },
-  "author": "Crew Spence",
+  "author": "Surya Fotedar",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/csspence/reviews/issues"
+    "url": "https://github.com/hratx41-sdc/reviews/issues"
   },
-  "homepage": "https://github.com/csspence/reviews#readme"
+  "homepage": "https://github.com/hratx41-sdc/reviews#readme"
 }
