--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "csv-writer": "^1.3.0",
     "express": "^4.17.0",
     "mongoose": "^5.5.9",
     "react": "^16.8.6",
@@ -23,6 +24,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
+    "faker": "^4.1.0",
     "nodemon": "^1.19.0",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
