--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "csv-writer": "^1.3.0",
     "express": "^4.17.0",
+    "locus": "^2.0.1",
     "mongoose": "^5.5.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
