--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "fashova_reviews",
   "main": "./server/server_index.js",
   "dependencies": {
+    "artillery": "^1.6.0-28",
     "axios": ">=0.19.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "csv-writer": "^1.3.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "knex": "^0.17.5",
     "locus": "^2.0.1",
     "mongoose": "^5.5.9",
+    "newrelic": "^5.9.1",
+    "pg": "^7.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
