--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "react-dev": "webpack -d --watch",
     "start": "nodemon server/server_index.js",
+    "restart": "pm2 startOrRestart ecosystem.config.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
   },
   "repository": {
